fix display align

--- a/Calculator/styles/style.css
+++ b/Calculator/styles/style.css
@@ -12,14 +12,14 @@ table {
 
 th {
     height: 70px;
-    text-align: left;
+    text-align: right;
     font-size: 30px;
     font-weight: 500;
     color: rgba(245, 245, 245, 0.822);
 
     background-color: #313330;
 
-    padding-left: 20px;
+    padding-right: 20px;
 }
 
 td {
